# haskell-parser-examples

./: README  README.md  lambda.cabal
examples/: ex2.lam  ex3.lam  ex4.lam  ex5.lam  ex6.lam
happy-parser-src/: Token.x
parsec-parser-src/: Lexer.hs  Parser.hs
src/: AlexToken.x  Env.hs  Eval.hs  Expr.hs  HappyParser.y  Main.hs  ParsecLexer.hs  ParsecParser.hs
