Name:           haskell-parsers
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Geoff Hulette
Synopsis:       Untyped lambda-calculus interpreter with different parsers
Build-Type:     Simple
  
Executable lambda-parsec
  Main-Is:        Main.hs
  Hs-Source-Dirs: shared-src,parsec-parser-src
  Build-Depends:  base >= 4, array, containers, mtl, regex-compat, parsec >= 3
  GHC-Options:    -Wall

Executable lambda-happy-alex
  Main-Is:        Main.hs
  Other-modules:  Token, Parser
  Hs-Source-Dirs: shared-src,happy-parser-src
  Build-Depends:  base >= 4, array, containers, mtl, regex-compat
  Build-Tools:    alex, happy
  GHC-Options:    -Wall
