Name:           haskell-parsers
Version:        0.2
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Geoff Hulette
Synopsis:       Simple untyped lambda-calculus interpreter demonstrating different parsers
Build-Type:     Simple
  
Executable lambda
  Main-Is:        Main.hs
  Other-modules:  AlexToken,HappyParser
  Hs-Source-Dirs: src
  Build-Depends:  base >= 4,parsec >= 3,array
  GHC-Options:    -Wall

-- Executable lambda-happy-alex
--   Main-Is:        Main.hs

--   Hs-Source-Dirs: src
--   Build-Depends:  base >= 4, array, containers, mtl, regex-compat
--   Build-Tools:    alex, happy
--   GHC-Options:    -Wall
